# qdrant-neo4j-crawl4ai-mcp

./: .env.example  .env.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  PORTFOLIO_SUMMARY.md  README.md  _config.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  security.yml
deployment/: fly.toml  railway.json
docs/: AGENTIC_RAG_RECOMMENDATION.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_OPERATIONS.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  INDEX.md  PRD.md  QUALITY_ASSURANCE_REPORT.md  README.md  SITEMAP.md  TECHNICAL_DOCUMENTATION.md
docs/adrs/: ADR-001-agent-framework-selection.md  ADR-002-hybrid-search-architecture.md  ADR-003-crawl4ai-integration-strategy.md  ADR-004-multi-agent-coordination-pattern.md  ADR-005-memory-state-management.md  ADR-006-evaluation-monitoring-framework.md  ADR-007-security-authentication.md  README.md
docs/api/: README.md
docs/api/tools/: graph-tools.md  vector-tools.md  web-tools.md
docs/architecture/: README.md  components.md  data-flow.md  system-overview.md
docs/deployment/: README.md  cloud-providers.md  docker.md  kubernetes.md
docs/development/: README.md  code-style.md  contributing.md  debugging.md  local-setup.md  testing.md
docs/examples/: .env.example  README.md  setup.py
docs/examples/advanced-workflows/: README.md  hybrid-search.py
docs/examples/basic-usage/: README.md  graph-operations.py  vector-operations.py  web-intelligence.py
docs/examples/basic-usage/document-qa-system/: README.md
docs/examples/client-implementations/: README.md
docs/examples/integration-patterns/: README.md
docs/examples/use-cases/: README.md
docs/getting-started/: README.md  configuration.md  first-queries.md  installation.md  quick-start.md  troubleshooting.md
docs/guides/: README.md  best-practices.md  performance-optimization.md  troubleshooting.md
docs/research/: PRD.md
k8s/manifests/: configmap.yaml  ingress.yaml  namespace.yaml  qdrant-neo4j-crawl4ai-mcp.yaml  qdrant.yaml
monitoring/grafana/: datasources.yml  grafana.ini
monitoring/grafana/dashboards/: qdrant-neo4j-crawl4ai-mcp-overview.json
monitoring/loki/: loki.prod.yml  loki.yml
monitoring/prometheus/: prometheus.prod.yml  prometheus.yml
monitoring/promtail/: promtail.prod.yml  promtail.yml
scripts/: deploy.sh  rename_repository.sh
src/qdrant_neo4j_crawl4ai_mcp/: __init__.py  auth.py  config.py  main.py  middleware.py
src/qdrant_neo4j_crawl4ai_mcp/services/: __init__.py  crawl4ai_client.py  graph_service.py  neo4j_client.py  qdrant_client.py  vector_service.py  web_service.py
src/qdrant_neo4j_crawl4ai_mcp/tools/: __init__.py  graph_tools.py  vector_tools.py  web_tools.py
tests/: conftest.py
tests/integration/: test_cross_service_integration.py  test_unified_server.py
tests/performance/: test_load_benchmarks.py
tests/property/: test_mcp_protocol.py
tests/security/: test_auth_security.py
tests/unit/: test_graph_service.py  test_vector_service.py
